--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=esp-library-template
-version=0.0.0
+name=esp-library-two
+version=1.0.0
 author=Daniele Rossi <reds6188@gmail.com>
 maintainer=Daniele Rossi <reds6188@gmail.com>
-sentence=Template Library for ESP32
-paragraph=Template Library for ESP32
+sentence=Template Library One for ESP32
+paragraph=Template Library One for ESP32
 category=Other
-url=https://github.com/reds6188/esp-library-template.git
+url=https://github.com/reds6188/esp-lib_example-2.git
 architectures=esp32
-depends=https://github.com/reds6188/esp-console.git (=1.0.0), mulmer89/ESPRandom (=1.5.0)
+depends=https://github.com/reds6188/esp-lib_example-1.git (=1.0.0)
